WIP: started real time simulation server and visualization

--- a/Model/visualization/src/index.html
+++ b/Model/visualization/src/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Starter</title>
+		<title>Racebird 6-DoF Model Visualizer</title>
         <link rel="stylesheet" href="./style.css">
 	</head>
 	<body>
