--- a/Model/visualization/src/index.html
+++ b/Model/visualization/src/index.html
@@ -7,6 +7,9 @@
 	</head>
 	<body>
         <canvas class="threejs"></canvas>
+		<div id="pane-left" class="tp-container"></div>
+		<div id="pane-right" class="tp-container"></div>
+
         <script type="module" src="./visualizer.js"></script>
 	</body>
 </html>
